--- a/resources/layout.html
+++ b/resources/layout.html
@@ -25,12 +25,15 @@
   <meta name="twitter:creator" content="@META_TWITTER_CARD_ACCOUNT">
 
   <!-- OpenGraph -->
-  <meta property="og:url" content="META_CURRENT_ABSOLUTE_URL"/>
-  <meta property="og:title" content="META_PROJECT_TITLE_STR(70)"/>
-  <meta property="og:site_name" content="META_PROJECT_TITLE_STR(70)"/>
-  <meta property="og:description" content="META_PROJECT_DESC_STR(150)"/>
+  <meta property="og:url" content="META_CURRENT_ABSOLUTE_URL">
+  <meta property="og:title" content="META_PROJECT_TITLE_STR(70)">
+  <meta property="og:site_name" content="META_PROJECT_TITLE_STR(70)">
+  <meta property="og:description" content="META_PROJECT_DESC_STR(150)">
   <!-- Minimun 600x315px, Recommended 1200x630px -->
-  <meta property="og:image" content="https://raw.githubusercontent.com/carloscabo/socialize/master/snapshot.png"/>
+  <meta property="og:image" content="https://raw.githubusercontent.com/carloscabo/socialize/master/snapshot.png">
+  <!-- Next tags are optional but recommended -->
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
 
   <!-- Responsive -->
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
